[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Pickup.png" type="Texture" id=1]
[ext_resource path="res://PickUp.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Pickup1.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Pickup2.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 26.6766

[node name="PickUp" type="Area2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0862745, 0.729412, 0.117647, 1 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]

[node name="Grabbed" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="Pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
max_distance = 4000.0
[connection signal="area_shape_entered" from="." to="." method="_on_PickUp_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_PickUp_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
